--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Wed Jan  7 12:54:17 EST 2004
+Last updated:		Fri Jan  9 16:12:53 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -182,7 +182,7 @@ Commands
   by searching for non-conflicting constraint names, and prefix with table name
 * Use more reliable method for CREATE DATABASE to get a consistent copy of db
 * -Have psql \dn show only visible temp schemas using current_schemas()
-* Have psql '\i ~/<tab><tab>' actually load files it displays from home dir
+* -Have psql '\i ~/<tab><tab>' actually load files it displays from home dir
 * Ignore temporary tables from other session when processing inheritance
 * Add GUC setting to make created tables default to WITHOUT OIDS
 * Have pg_ctl look at PGHOST in case it is a socket directory
