--- a/src/bin/psql/po/sv.po
+++ b/src/bin/psql/po/sv.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: PostgreSQL 7.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-01-11 07:42+0100\n"
-"PO-Revision-Date: 2004-01-11 07:53+0100\n"
+"PO-Revision-Date: 2004-01-14 13:12+0100\n"
 "Last-Translator: Dennis Björklund <db@zigo.dhs.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -540,7 +540,7 @@ msgid ""
 "Report bugs to <pgsql-bugs@postgresql.org>."
 msgstr ""
 "\n"
-"För mer information, skriv \"\\?\" (för interna kommandona) eller\n"
+"För mer information, skriv \"\\?\" (för interna kommandon) eller\n"
 "\"\\help\" (för SQL-kommandon) i psql, eller läs avsnittet om psql\n"
 "i PostgreSQL-dokumentationen.\n"
 "\n"
