--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Mon Jan 26 17:38:04 EST 2004
+Last updated:		Mon Jan 26 17:38:41 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -463,7 +463,7 @@ Source Code
 * Remove memory/file descriptor freeing before ereport(ERROR)  (Bruce)
 * Acquire lock on a relation before building a relcache entry for it
 * Research interaction of setitimer() and sleep() used by statement_timeout
-* -Add checks for fclose() failure
+* -Add checks for fclose() failure (Tom)
 * Change CVS $PostgreSQL$
 * Exit postmaster if postgresql.conf can not be opened
 * Rename /scripts directory because they are all C programs now
