--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Fri Jan 30 06:11:06 EST 2004
+Last updated:		Tue Feb  3 11:51:21 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -265,6 +265,7 @@ Clients
 * -Allow pg_dump to dump CREATE CONVERSION (Christopher)
 * Allow fastpast to pass values in portable format
 * Allow libpq to return information about prepared queries
+* Make pg_restore continue after errors, so it acts more like pg_dump scripts
 
 * JDBC
 	o Comprehensive test suite. This may be available already.
