--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Tue Feb  3 11:51:21 EST 2004
+Last updated:		Sat Feb  7 20:17:06 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -24,8 +24,9 @@ Urgent
 	o Queries across databases or servers (two-phase commit)
 	o Allow replication over unreliable or non-persistent links
 	o http://gborg.postgresql.org/project/pgreplication/projdisplay.php
-* Point-in-time data recovery using backup and write-ahead log
-* Create native Win32 port, http://momjian.postgresql.org/main/writings/pgsql/win32.html
+* Point-in-time data recovery using backup and write-ahead log,
+  http://momjian.postgresql.org/main/writings/pgsql/project/pitr.html
+* Create native Win32 port, http://momjian.postgresql.org/main/writings/pgsql/project/win32.html
 
 
 
