--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Feb 12 09:41:06 EST 2004
+Last updated:		Thu Feb 12 11:05:09 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -27,7 +27,6 @@ Urgent
 * Point-in-time data recovery using backup and write-ahead log,
   http://momjian.postgresql.org/main/writings/pgsql/project/pitr.html
 * Create native Win32 port, http://momjian.postgresql.org/main/writings/pgsql/project/win32.html
-
 
 
 Reporting
@@ -82,7 +81,7 @@ Data Types
 * Allow to_char to print localized month names (Karel)
 * Allow functions to have a search path specified at creation time
 * Make LENGTH() of CHAR() not count trailing spaces
-
+* Allow substring/replace() to get/set bit values
 
 
 * ARRAYS
