--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Feb 12 12:22:33 EST 2004
+Last updated:		Thu Feb 12 12:31:03 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -298,7 +298,7 @@ Clients
 Referential Integrity
 =====================
 
-* Add MATCH PARTIAL referential integrity [foreign]
+* Add MATCH PARTIAL referential integrity
 * Add deferred trigger queue file (Jan)
 * Implement dirty reads or shared row locks and use them in RI triggers
 * Enforce referential integrity for system tables
