--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Feb 12 12:32:33 EST 2004
+Last updated:		Thu Feb 12 12:38:45 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -146,7 +146,7 @@ Indexes
 * Use bitmaps to combine existing indexes [performance]
 * Allow use of indexes to search for NULLs
 * Allow SELECT * FROM tab WHERE int2col = 4 to use int2col index, int8,
-  float4, numeric/decimal too [optimizer]
+  float4, numeric/decimal too
 * Add FILLFACTOR to btree index creation
 * Add concurrency to GIST
 * Allow a single index to index multiple tables (for inheritance and subtables)
@@ -419,7 +419,7 @@ Write-Ahead Log
 Optimizer / Executor
 ====================
 
-* Missing optimizer selectivities for date, r-tree, etc. [optimizer]
+* Missing optimizer selectivities for date, r-tree, etc
 * Allow ORDER BY ... LIMIT to select top values without sort or index
   using a sequential scan for highest/lowest values (Oleg)
 * Precompile SQL functions to avoid overhead (Neil)
