--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Feb 12 12:59:48 EST 2004
+Last updated:		Thu Feb 12 13:01:10 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -15,7 +15,7 @@ Bracketed items "[]" have more detailed.
 Urgent
 ======
 
-* Add replication of distributed databases [replication]
+* Add replication of distributed databases
 	o Automatic failover
 	o Load balancing
 	o Master/slave replication
