--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Feb 12 13:14:40 EST 2004
+Last updated:		Thu Feb 12 18:27:48 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -81,6 +81,9 @@ Data Types
 	o Allow MIN()/MAX() on arrays
 	o Delay resolution of array expression type so assignment coercion 
 	  can be performed on empty array expressions (Joe)
+	o Modify array literal representation to handle array index lower bound
+	  of other than one
+
 
 * BINARY DATA
 	o Improve vacuum of large objects, like /contrib/vacuumlo
@@ -180,7 +183,6 @@ Commands
 * Add GUC setting to make created tables default to WITHOUT OIDS
 * Have pg_ctl look at PGHOST in case it is a socket directory
 * Allow column-level privileges
-
 
 * ALTER
 	o ALTER TABLE ADD COLUMN does not honor DEFAULT and non-CHECK CONSTRAINT
