--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,6 @@
 TODO list for PostgreSQL
 ========================
-Last updated:		Thu Feb 12 23:36:00 EST 2004
+Last updated:		Thu Feb 12 23:47:05 EST 2004
 
 Current maintainer:	Bruce Momjian (pgman@candle.pha.pa.us)
 
@@ -332,7 +332,7 @@ Exotic Features
   to clients
 * Add two-phase commit to all distributed transactions with 
   offline/readonly server status or administrator notification for failure
-* Allow cross-db queries with transaction sematics
+* Allow cross-db queries with transaction semantics
 
 
 PERFORMANCE
